Fix : UI /problems page, with status text was too small for unknown text.

--- a/shinken/webui/plugins/problems/htdocs/css/accordion.css
+++ b/shinken/webui/plugins/problems/htdocs/css/accordion.css
@@ -141,7 +141,7 @@ ul.dock li:hover span { display: block; }
     background: white;
 }
 .tableCriticity .txt_status{
-    width:60px;
+    width: 70px;
     text-align:center;
 }
 .tableCriticity .duration{
